<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- englishgame -->
    <string name="http_request_base_url">http://englishgameitranslate.altervista.org/</string>
    <string name="unit_id">ca-app-pub-8281150817879473/6797982542</string>
    <!-- itranslate -->
    <!-- <string name="unit_id">ca-app-pub-8281150817879473/7385933343</string> -->
    <string name="app_name">English Game</string>
    <string name="package_app_name">com.chiararipanti.englishgame</string>
    <string name="elementary">Elementary Level - General Language</string>
    <string name="verbs">Verbs</string>
    <string name="adjectives">Adjectives</string>
    <string name="question_words">Question words</string>
    <string name="past_simple">Past Simple</string>
    <string name="preintermediate">Pre-Intermediate Level - General Language</string>
    <string name="regular_irregular_verbs">Regular-Irregular Verbs</string>
    <string name="negative_forms">Negative Forms</string>
    <string name="some_any_much_many">Some Any Much Many</string>
    <string name="articles">Articles</string>
    <string name="vocabularyquizzes">Vocabulary Quizzes</string>
    <string name="food_vocabulary">Food vocabulary</string>
    <string name="animals">Animals</string>
    <string name="clothes">Clothes</string>
    <string name="families">Families</string>
    <string name="intermediate">Intermediate Level - General Language</string>
    <string name="prepositions">Prepositions</string>
    <string name="relative_pronouns">Relative Pronouns</string>
    <string name="common_verbs">Common Verbs</string>
    <string name="modal_verbs">Modal Verbs</string>
    <string name="upperintermediate">Upper-Intermediate Level - General Language</string>
    <string name="out_pv">Phrasals with out</string>
    <string name="on_pv">Phrasals with on</string>
    <string name="word_conversion">Word Conversion</string>
    <string name="idioms">Idioms</string>
    <string name="advanced">Advanced Level (CAE-CPE) - General Language</string>
    <string name="word_conversion_be">Word Conversion</string>
    <string name="antonyms_and_synonyms">Antonyms and Synonyms</string>
    <string name="businessenglish">Business English</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="title_activity_home">Home</string>
    <string name="principiante">Principiante</string>
    <string name="base">Base</string>
    <string name="intermedio">Intermedio</string>
    <string name="esperto">Esperto</string>
    <string name="vita_quotidiana">Vita Quotidiana</string>
    <string name="animali">Animali</string>
    <string name="sport">Sport</string>
    <string name="cibo">Cibo</string>
    <string name="viaggi">Viaggi</string>
    <string name="msg_rate">Se ti piace English Game per favore dedica 30 secondi per votare l\'App. Grazie per il supporto!</string>
    <string name="msg_ricordamelo">Ricordamelo piu\' tardi</string>
    <string name="msg_nograzie">No, grazie</string>
    <string name="alfabeto">abcdefghijklmnopqrstuvwxyz</string>
    <string name="attiva_connessione">Attiva la connessione per iniziare a giocare! </string>
    <string name="no_audio">Audio non disponible</string>
    <string name="traduci_parola">Traduci: </string>
    <string name="modifica_head">Modifica parola:</string>
    <string name="attenzione">Attenzione</string>
    <string name="piu_indovinati">Vocaboli piu\' indovinati</string>
    <string name="meno_indovinati">Vocaboli piu\' sbagliati</string>
    <string name="errore">Ops! Si e\' verificato un errore, prova piu\' tardi! </string>
    <string name="errori">Errori: </string>
    <string name="punteggio">Punti: </string>
    <string name="record">Record: %1$.2f</string>
    <string name="partite">Partite: %1$d</string>
    <string name="gameover">GAME OVER</string>
    <string name="next">NEXT</string>
    <string name="restart">Restart</string>
    <string name="verifica">OK</string>
    <string name="aiuto">Indizio</string>
    <string name="annulla">Annulla</string>
    <string name="soluzione">Soluzione</string>
    <string name="soluzione_msg">Vuoi conoscere la soluzione? Il numero di sbagliate aumenterà di uno!</string>
    <string name="aiuto_msg">Vuoi avere un aiuto? Questa operazione ti costera\' un punto</string>
    <string name="esatto">Esatto!</string>
    <string name="grazie">Grazie per aver scaricato English Game!</string>
    <string name="nuovo_record">Complimenti! Hai stabilito un nuovo record personale! \n NUOVO RECORD:  </string>
    <string name="nuovo_record_title">Record</string>
    <string name="title_activity_regole">Regole</string>
    <string name="regole"><b>COME USARE L\'APPLICAZIONE</b> \n \n<b>1) Aggiungi nuovi vocaboli:</b>\nScarica i vocaboli nell\' apposita sezione del menu, puoi scegliere i vocaboli da scaricare in base alla difficolta\' o in base all\' argomento che preferisci. \nPuoi inoltre aggiungere <b>Vocaboli personali</b> scegliendo la voce \'Aggiungi vocabolo\' dal menu.\n\n2) Puoi visualizzare i vocaboli scaricati e quelli inseriti selezionando la voce del menu \'Elenco Vocaboli\'. Da qui puoi inoltre modificare o cancellare i vocaboli presenti nell\' elenco.\n\n3) <b>Inizia il TEST!</b>\n Cerca di inserire la giusta traduzione del vocabolo proposto; Per ogni vocabolo esatto ottieni un punto, puoi richiede un\' aiuto per cercare di individuare il vocabolo, ti verranno cosi\' mostrate le prime due lettere del vocabolo ma ti verra\' scalato 0.25 dal punteggio totalizzato. Il gioco finisce quando vengono commessi 5 errori.\n\n4) Visualizza le statistiche sui vocaboli per sapere quali vocaboli conosci meglio e su quali invcece devi esercitarti maggiormente</string>
    <string name="punti"><b>PUNTI</b> \n Il punteggio viene calcolato nel seguente modo: \n VOCABOLO ESATTO: +1 pt \n VOCABOLO ERRATO: +1 errore \n AIUTO RICHIESTO: -.25 pt \n SOLUZIONE RICHIESTA: -.75 pt \n IL PUNTEGGIO SI AZZERA QUANDO VENGONO TOTALIZZATI 5 ERRORI</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_settings">Settings</string>
    <string name="gioca">Nuova Partita</string>
    <string name="musica">Musica</string>
    <string name="titolo_canzone">Titolo canzone</string>
    <string name="testo_canzone">Testo e traduzione</string>
    <string name="livello">Livello</string>
    <string name="argomento">Argomento</string>
    <string name="sfida">Sfida un amico</string>
    <string name="complete">(Complete the sentence below with one word)</string>
    <string name="quizf">Film</string>
    <string name="quiz">Test</string>
    <string name="quizm">Musica</string>
    <string name="quizp">Parole</string>
    <string name="quizt">Traduzione</string>
    <string name="conferma">Verifica</string>
    <string name="impara">Impara parole</string>
    <string name="title_activity_livelli">Livelli</string>
    <string name="title_activity_argomenti">Argomenti</string>
    <string name="title_activity_traduzione">TranslationActivity</string>
    <string name="aiuto_usato">Hai già usato questo aiuto in questa partita!</string>
    <string name="prime_lettere">Le prime lettere della parola sono: </string>
    <string name="aiuti_terminati">Hai esaurito gli aiuti per questa partita</string>
    <string name="aiuti_terminati_title">Aiuti terminati</string>
    <string name="testo_non_disp">Il testo di questa canzone non e\' disponibile</string>
    <string name="testo_non_disp_title">Testo non disponibile</string>
    <string name="attendi">Attendi</string>
    <string name="caricamento">Caricamento in corso…</string>
    <string name="esatta">ESATTA!!!</string>
    <string name="sbagliata">Wrong, try again!!</string>
    <string name="text_to_speech">Listening/Speaking</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_quiz_livelli">TestSubjectsActivity</string>
    <string name="title_activity_quiz_traduzione">QuizTraduzioneActivity</string>
    <string name="title_activity_main">MainGameActivity</string>
    <string name="title_activity_impara">LearnActivity</string>
    <string name="title_activity_imparaargomenti">LearnSubjectsActivity</string>
    <string name="title_activity_testo">SongTextActivity</string>
    <string name="title_activity_musica">MusicActivity</string>
    <string name="title_activity_speech">SpeechActivity</string>
    <string name="sound">Sound</string>
    <string name="ok">OK</string>
    <string name="edit_pref">Edit settings</string>
    <string name="sound_on">Sound ON</string>
    <string name="sound_off">Sound OFF</string>
    <string name="vibration_on">Vibration ON</string>
    <string name="vibration_off">Vibration OFF</string>
    <string name="solution">solution</string>
    <string name="help">help</string>
    <string name="show_sentence">Show Sentence</string>
    <string name="listen">Listen</string>
    <string name="gatto">Gatto</string>
    <string name="category">Category</string>
    <string name="wrong_answer">Wrong answer, try again!</string>

</resources>
