<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

<ScrollView 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/shape"
    android:layout_marginBottom="3dp"
	android:layout_marginLeft="10dp"
	android:layout_marginRight="10dp"
	android:layout_marginTop="3dp"
    android:layout_above="@+id/footer">
    
    
   
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
			
			    <LinearLayout
			        android:id="@+id/linearLayout1"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical" >
			        
			        <TextView 
			            android:id="@+id/level"
			                android:layout_height="wrap_content"
			            	android:layout_width="match_parent"
			                android:textColor="#000000" 
			                android:textSize="16sp"
			                android:background="@drawable/shape3"
			                android:fontFamily="sans-serif-condensed"
			                android:text="@string/quiz"
			                android:gravity="center"/>
			        
			      <TextView
			            android:id="@+id/title"
			            android:layout_height="wrap_content"
			            android:layout_width="match_parent"
			            android:gravity="center"
			            android:fontFamily="sans-serif-condensed"
			            android:textColor="#5e5555" 
			            android:text="@string/complete"
			            android:layout_marginTop="10dp"
			            android:layout_marginBottom="3dp"
			            android:textSize="12sp" />
			        
			        <TextView
			            android:id="@+id/text"
			            android:layout_height="wrap_content"
			            android:layout_width="match_parent"
			            android:gravity="center"
			            android:fontFamily="sans-serif-condensed"
			            android:textColor="#5e5555" 
			            android:text="@string/traduci_parola"
			            android:textSize="16sp" />
			        
			        <EditText
			        android:id="@+id/sol"
			        android:layout_height="wrap_content"
			        android:layout_width="match_parent"
			        android:ems="10"
			        android:layout_marginTop="7dp"
			         android:imeOptions="actionDone"
			        android:inputType="textPersonName" >
					<requestFocus />
			    </EditText>
			    <TextView 
				    android:id="@+id/prop"
				    android:layout_height="wrap_content"
			        android:layout_width="match_parent"
			        android:textColor="#f55a3c"
			        android:textSize="13sp"
			        android:background="@android:color/transparent"
			        android:layout_marginBottom="3dp"/>
			    
			        <Button
			        android:id="@+id/conferma"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/button"
			        android:fontFamily="sans-serif-condensed"
			        android:text="@string/conferma"
			        android:layout_marginTop="20dp"
			        android:onClick="conferma"
			        android:textColor="#ffffff" />
			        <Button
			        android:id="@+id/next"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/button"
			        android:fontFamily="sans-serif-condensed"
			        android:text="@string/next"
			        android:layout_marginTop="20dp"
			        android:onClick="next"
			        android:textColor="#ffffff" />
			        

			       
			    
			     
			     
			     
			    
			    </LinearLayout>

			    
			    	
			</RelativeLayout>
	</ScrollView>


<RelativeLayout
    android:id="@+id/footer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
 </RelativeLayout>
 
</RelativeLayout>