<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/shape"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/shape3"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/livello"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:padding="1dip">

                <TableRow
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/shape">

                    <TextView
                        android:id="@+id/errors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".30"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/errori"
                        android:textColor="#5e5555"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/points"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".30"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/punteggio"
                        android:textColor="#5e5555"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/record"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".30"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="#f55a3c"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">

                    <ImageButton
                        android:id="@+id/helpButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight=".15"
                        android:background="@drawable/shape6"
                        android:contentDescription="@string/help"
                        android:onClick="showHelp"
                        android:src="@drawable/aiuto" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".70"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/traduci_parola"
                        android:textColor="#5e5555"
                        android:textSize="21sp" />


                    <ImageButton
                        android:id="@+id/showSolution"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight=".15"
                        android:background="@drawable/shape6"
                        android:contentDescription="@string/solution"
                        android:onClick="showSolution"
                        android:src="@drawable/soluzione" />
                </TableRow>

                <TableRow android:layout_marginTop="0dp">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight=".15"
                        android:background="@drawable/shape6"
                        android:contentDescription="@string/show_sentence"
                        android:onClick="showSentence"
                        android:src="@drawable/frase" />

                    <TextView
                        android:id="@+id/englishWord"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".70"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:textColor="#5e5555"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight=".15"
                        android:background="@drawable/shape6"
                        android:contentDescription="@string/listen"
                        android:onClick="listenToWord"
                        android:src="@drawable/audio" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/sentence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:textColor="#5e5555"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/firstSelectedButtonsLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/secondSelectedButtonsLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <!--
                    PRIME SETTE LETTERE
                 -->
                <LinearLayout
                    android:id="@+id/firstRandomButtonsLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal" />

                <!--
                   SECONDE SETTE LETTERE
                -->
                <LinearLayout
                    android:id="@+id/secondRandomButtonsLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" />

            </LinearLayout>

            <!--
               INDICATORE PAROLA ESATTA
             -->


            <LinearLayout
                android:id="@+id/rigthAnswerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/esatta"
                    android:textColor="#5e5555"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:fontFamily="sans-serif-condensed"
                    android:onClick="next"
                    android:text="@string/next"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <!--
               GAMEOVER
             -->


            <LinearLayout
                android:id="@+id/gameoverLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/gameover"
                    android:textColor="#5e5555"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:fontFamily="sans-serif-condensed"
                    android:onClick="restart"
                    android:text="@string/restart"
                    android:textColor="#ffffff" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>