
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.chiararipanti.itranslate.ImparaargomentiActivity" >

<ScrollView 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:layout_above="@+id/footer">

    <LinearLayout
			        android:id="@+id/linearLayout"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="20dp"
			        android:orientation="vertical" >
			        
			  <!--   <TableLayout
						        android:layout_width="match_parent"
						        android:layout_height="wrap_content">
						        <TableRow
						            android:layout_marginBottom="20dp">
						            <LinearLayout
								        android:layout_width="0dp"
										android:layout_weight=".70"
								        android:orientation="vertical" >
						            <ImageButton 
								        android:id="@+id/img"
								        android:src="@drawable/titolo"
								        android:background="@null"
								        android:contentDescription="@string/app_name"
								        android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:onClick="home"
								        />
						            </LinearLayout>
						             <LinearLayout
								        android:layout_width="0dp"
										android:layout_weight=".15"
								        android:orientation="vertical" >
						            <ImageButton 
						                android:id="@+id/suono"
						                android:src="@drawable/sound"
						                android:layout_width="wrap_content"
						                android:layout_height="wrap_content"
						                android:background="@drawable/shape5"
						                android:layout_gravity="center"
						                android:onClick="volume"/>
						            </LinearLayout>
						             <LinearLayout
								        android:layout_width="0dp"
										android:layout_weight=".15"
								        android:orientation="vertical" >
						            <ImageButton 
						                
						                android:src="@drawable/rate"
						                android:layout_width="wrap_content"
						                android:layout_height="wrap_content"
						                android:background="@drawable/shape5"
						                android:layout_gravity="center"
						                android:onClick="rate"/>
						            </LinearLayout>
						            </TableRow>
						            </TableLayout>-->
			    
			    
			        
	<LinearLayout
			        android:id="@+id/linearLayout1"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_margin="0dp"
			        android:orientation="vertical">
			        
	    <TableLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="5dp"
			        android:background="@drawable/shape"
			        android:layout_marginLeft="10dp"
			        android:layout_marginRight="10dp"
			        android:layout_marginTop="5dp"
			        android:padding="1dip" >
			 <TableRow
			            android:layout_marginLeft="10dp"
			        	android:layout_marginRight="10dp"
			        	android:layout_marginTop="7dp"
			        	android:layout_marginBottom="0dp"
			        	>

		<Button
		    android:id="@+id/principiante"
		    android:layout_width="0dp"
			android:layout_weight=".30"
			android:layout_height="wrap_content"
			android:layout_marginBottom="3dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
		    android:background="@drawable/shape7"
		    android:drawableTop="@drawable/principiante"
		    android:text="@string/principiante"
		    android:fontFamily="sans-serif-condensed"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:onClick="principiante"/>
		

		<Button
		    android:id="@+id/base"
			android:layout_width="0dp"
			android:layout_weight=".30"
			android:layout_height="wrap_content"
			android:layout_marginBottom="3dp"
			android:layout_marginLeft="5dp"
		    android:background="@drawable/shape7"
		    android:drawableTop="@drawable/base"
		    android:text="@string/base"
		    android:fontFamily="sans-serif-condensed"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:onClick="base"/>
		
</TableRow>
<TableRow
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="7dp">

		<Button
		    android:id="@+id/intermedio"
		    android:layout_width="0dp"
			android:layout_weight=".30"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
		    android:background="@drawable/shape7"
		    android:text="@string/intermedio"
		    android:drawableTop="@drawable/intermedio"
		    android:fontFamily="sans-serif-condensed"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:onClick="intermedio"/>
		

		<Button
		    android:id="@+id/esperto"
		    android:layout_width="0dp"
			android:layout_weight=".30"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
		    android:background="@drawable/shape7"
		    android:drawableTop="@drawable/esperto"
		    android:text="@string/esperto"
		    android:fontFamily="sans-serif-condensed"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:onClick="esperto"/>
		</TableRow>

		</TableLayout>
		<TableLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="3dp"
			        android:background="@drawable/shape"
			        android:layout_marginLeft="10dp"
			        android:layout_marginRight="10dp"
			        android:layout_marginTop="15dp"
			        android:padding="1dip" >
			 <TableRow
			            android:layout_marginLeft="10dp"
			        	android:layout_marginRight="10dp"
			        	android:layout_marginTop="7dp"
			        	android:layout_marginBottom="0dp"
			        	>
		
		<Button
		    android:id="@+id/animali"
		    android:layout_width="0dp"
			android:layout_weight=".50"
			android:layout_height="wrap_content"
			android:layout_marginBottom="3dp"
			android:layout_marginLeft="5dp"
		    android:contentDescription="@string/animali"
		    android:text="@string/animali"
		    android:fontFamily="sans-serif-condensed"
		    android:textSize="13sp"
		    android:background="@drawable/shape7"
        	android:drawableTop="@drawable/animali"
		    android:onClick="animali"/>
		
		<Button
		    android:id="@+id/viaggi"
		    android:layout_width="0dp"
			android:layout_weight=".50"
			android:layout_height="wrap_content"
			android:layout_marginBottom="3dp"
			android:layout_marginLeft="5dp"
		    android:contentDescription="@string/viaggi"
		    android:text="@string/viaggi"
		    android:fontFamily="sans-serif-condensed"
		    android:textSize="13sp"
		    android:background="@drawable/shape7"
        	android:drawableTop="@drawable/viaggi"
		    android:onClick="viaggi"/>
		</TableRow>
<TableRow
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="7dp">
		
		<Button
		    android:id="@+id/vita"
		    android:layout_width="0dp"
			android:layout_weight=".50"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
		    android:text="@string/vita_quotidiana"
		    android:fontFamily="sans-serif-condensed"
		    android:textSize="13sp"
		    android:background="@drawable/shape7"
        	android:drawableTop="@drawable/vita"
		    android:onClick="vita"/>
		
		<Button
		    android:id="@+id/cibo"
		    android:layout_width="0dp"
			android:layout_weight=".50"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
		    android:contentDescription="@string/cibo"
		    android:text="@string/cibo"
		    android:fontFamily="sans-serif-condensed"
		    android:textSize="13sp"
		    android:background="@drawable/shape7"
        	android:drawableTop="@drawable/cibo"
		    android:onClick="cibo"/>
		</TableRow>


</TableLayout>
</LinearLayout>
</LinearLayout>
 </ScrollView>
 
<RelativeLayout
    android:id="@+id/footer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
 </RelativeLayout>

</RelativeLayout>
